# azure-pipelines-python-examples

django-basic/: requirements.txt
library-basic/: requirements.txt
library-flit/: pyproject.toml
