[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "demolib"
author = "Anthony Shaw"
author-email = "anthonyshaw@apache.org"
home-page = "https://github.com/tonybaloney/azure-pipelines-python-examples"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = []
requires-python = ">=3.6"
description-file = "README.md"
